# repro-wasi-virt-python

./: Cargo.toml  build.sh  flake.nix  rust-toolchain
guest/: Cargo.toml
guest/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
wit/: main.wit
