[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
cap-std = "2.0.0"
tokio = { version = "1.32.0", features = ["full"] }
wasi-common = "13.0.0"
wasmtime = { version = "13", features = ["component-model"] }
wasmtime-wasi = "13"
